fixed navigation, footer alignment

--- a/styles.css
+++ b/styles.css
@@ -128,6 +128,7 @@ body, html {
     color: white; 
     font-family: 'Lato', Arial, sans-serif;
     letter-spacing: 3px; 
+    padding-right: 3.5%;
   }
   
   .navbar-name a {
@@ -167,15 +168,18 @@ footer {
 }
 
 .footer-panel {
+  align-items: center;
   background-color: #0f4c75;
   padding: 10px 0;
 }
 
 .footer-links {
   display: flex;
+  align-items: center;
   justify-content: center;
   gap: 40px;
   margin: 10px 0;
+
 }
 
 .footer-links a {
@@ -191,6 +195,7 @@ footer {
 }
 
 .footer-copyright {
+  text-align: center;
   font-size: 1rem;
   margin: 5px 0;
   letter-spacing: 1px;
@@ -612,11 +617,11 @@ footer {
 
 /* Speaking Header Title */
 .speaking-header {
-  text-align: center;
+  text-align: left;
   max-width: 1300px; 
   width: 100%;
-  margin-bottom: 80px; 
-  margin-top: -110px;
+  margin-bottom: 30px; 
+  margin-top: -50px;
 }
 
 .speaking-header h1 {
@@ -787,6 +792,7 @@ footer {
 
   .menu-icon span {
     height: 3px;
+    transition: transform 0.5s ease, opacity 0.5s ease, background-color 0.5s ease;
   }
 
   .menu-icon.active span:nth-child(1) {
@@ -805,6 +811,10 @@ footer {
     transform: translateY(0);
   }
 
+  .navbar-name {
+    padding-right: 12%;
+  }
+
   .nav-links a {
     font-size: 1.6rem;
   }
@@ -813,6 +823,10 @@ footer {
   .footer-links a {
     font-size: 1rem;
     letter-spacing: 1px;
+  }
+
+  .footer-copyright {
+    font-size: 0.8rem;
   }
 
   /* Content Boxes */
@@ -900,7 +914,6 @@ footer {
   }
 
   /* Speaking Page List */
-
   .speaking-container {
     align-items: flex-start; 
     margin: 20px;
@@ -917,12 +930,15 @@ footer {
     margin: 0 auto; 
     padding: 0px 0px;
     box-sizing: border-box;
+  }
 
   .speaking-list li {
+    background-color: #0e0e0e;
     align-items: flex-start;
     flex-direction: column;
     justify-content: left;
-    margin: 20px auto;
+    margin: 10px auto;
+    padding: 0px 0px;
     box-sizing: border-box;
   }
 
@@ -975,5 +991,5 @@ footer {
     flex-direction: row;
     gap: 10px;
   }
-  
-}
+
+  }
